# vizfold-foundation

./: .gitignore  Dockerfile  README.md  cybershuttle.yml  environment.yml  install.sh  pyproject.toml  run_pretrained_openfold.py  setup.py
docs/source/: FAQ.md
install/: config.sh  interactive.sh  setup.sh
run/: fold.sh
science-gateway/: .gitignore  CONTRIBUTING.md  DEMO.md  README  README.md
science-gateway/apps/executor/: Cargo.toml
science-gateway/apps/executor/examples/: plan_openfold_command.rs  register_openfold_demo_artifacts.rs  run_local_command.rs  run_openfold_workflow.rs
science-gateway/apps/executor/src/: main.rs
science-gateway/apps/executor/src/adapters/: cli.rs  rest.rs
science-gateway/apps/executor/src/core/: commands.rs  config.rs  db.rs  execution.rs  mod.rs  output_locations.rs  preflight.rs  seed.rs  tests.rs
science-gateway/apps/executor/src/core/entities/: artifact_types.rs  artifacts.rs  execution_targets.rs  mod.rs  model_backends.rs  model_invocation_profiles.rs  runs.rs
science-gateway/apps/executor/src/core/migrations/: m20260707_000001_create_model_backends_table.rs  m20260707_000002_create_runs_table.rs  m20260707_000003_create_artifacts_table.rs  m20260710_000002_create_execution_targets_table.rs  m20260710_000003_create_model_invocation_profiles_table.rs  m20260716_000004_add_input_id_to_runs_table.rs  m20260717_000005_add_artifact_types.rs  mod.rs
science-gateway/apps/executor/src/core/model_runners/: mod.rs  openfold.rs
science-gateway/apps/executor/src/core/repositories/: artifact_types.rs  artifacts.rs  execution_targets.rs  mod.rs  model_backends.rs  model_invocation_profiles.rs  runs.rs
science-gateway/apps/executor/src/core/services/: artifact_types.rs  artifacts.rs  execution_targets.rs  mod.rs  model_backends.rs  model_invocation_profiles.rs  openfold_artifacts.rs  openfold_execution.rs  runs.rs  validation.rs
scripts/: install_third_party_dependencies.sh
(+44 files in other folders)
