[build-system]
# torch is deliberately absent: the CUDA extension must link against the SAME
# torch build it runs against, so it has to come from the target environment
# rather than an isolated one. Build with --no-build-isolation into an env that
# already has torch; PEP 518 has no way to express "use the environment's copy".
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "openfold"
version = "2.2.0"
description = "A PyTorch reimplementation of DeepMind's AlphaFold 2"
requires-python = ">=3.10"
authors = [{ name = "OpenFold Team", email = "jennifer.wei@omsf.io" }]
license = { text = "Apache License, Version 2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/aqlaboratory/openfold"

[tool.setuptools.packages.find]
# namespaces defaults to true, which would sweep up every directory in the repo
# (docs, run, install, outputs, web_app...) as a top-level package.
namespaces = false
exclude = ["tests*", "scripts*"]

[tool.setuptools.package-data]
openfold = ["utils/kernel/csrc/*"]
"*" = ["resources/stereo_chemical_props.txt"]
